[package]
name = "lockjaw"
version = "2.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-recursion = "1.0.5"
uaparser = "0.6.1"
reqwest = { version = "0.11", features = ["cookies", "blocking"] }
reqwest_cookie_store = "0.8"
tokio = { version = "1.35", features = ["full"] }
select = "0.6.1"
url = "2.2.2"
clap = "2.33"
rusqlite = "0.30.0"
regex = "1"
markup5ever = "0.16.0"
xml5ever = "0.22.1"
